Vscode do not format sh files on save

--- a/home/programs/vscode/settings.json
+++ b/home/programs/vscode/settings.json
@@ -17,6 +17,12 @@
       "*.tf": "terraform"
     },
     "editor.formatOnSave": true,
+    "[bash]": {
+      "editor.formatOnSave": false
+    },
+    "[shellscript]": {
+      "editor.formatOnSave": false
+    },
     "git.mergeEditor": false,
     "go.coverMode": "atomic",
     "go.coverShowCounts": true,
