--- a/home/programs/vscode/settings.json
+++ b/home/programs/vscode/settings.json
@@ -47,5 +47,6 @@
     "editor.defaultFormatter": "ms-azuretools.vscode-docker"
   },
   "arduino.path": "/etc/profiles/per-user/steven/bin/arduino-cli",
-  "arduino.useArduinoCli": true
+  "arduino.useArduinoCli": true,
+  "jest.runMode": "on-demand"
 }
